// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmbeddingShowcaseView — W0-03 a11y tree baseline > exposes a stable role/name tree with Sigma application role for embedding scatter 1`] = `
[
  {
    "name": "Embedding scatter plot",
    "role": "application",
    "testid": "",
  },
  {
    "name": "Amazon",
    "role": "button",
    "testid": "embedding-point-Amazon",
  },
  {
    "name": "Apple",
    "role": "button",
    "testid": "embedding-point-Apple",
  },
  {
    "name": "Microsoft",
    "role": "button",
    "testid": "embedding-point-Microsoft",
  },
  {
    "name": "Sample coordinates frozen from Semantica visualization fixture; no live embeddin",
    "role": "div",
    "testid": "embedding-offline-disclosure",
  },
  {
    "name": "",
    "role": "div",
    "testid": "embedding-scatter",
  },
  {
    "name": "AmazonAppleMicrosoftSample coordinates frozen from Semantica visualization fixtu",
    "role": "div",
    "testid": "embedding-showcase-view",
  },
]
`;

exports[`KgShowcaseView — W0-03 a11y tree baseline > exposes a stable role/name/testid tree for the intro fixture 1`] = `
[
  {
    "name": "Knowledge graph showcase",
    "role": "application",
    "testid": "",
  },
  {
    "name": "",
    "role": "div",
    "testid": "kg-showcase-view",
  },
]
`;

exports[`OntologyShowcaseView — W0-03 a11y tree baseline > exposes a stable role=name tree with Sigma application role for ontology hierarchy 1`] = `
[
  {
    "name": "Ontology hierarchy showcase",
    "role": "application",
    "testid": "",
  },
  {
    "name": "CEO_of",
    "role": "button",
    "testid": "ontology-class-CEO_of",
  },
  {
    "name": "Entity",
    "role": "button",
    "testid": "ontology-class-Entity",
  },
  {
    "name": "Organization",
    "role": "button",
    "testid": "ontology-class-Organization",
  },
  {
    "name": "Person",
    "role": "button",
    "testid": "ontology-class-Person",
  },
  {
    "name": "Relationship",
    "role": "button",
    "testid": "ontology-class-Relationship",
  },
  {
    "name": "EntityOrganizationPersonRelationshipCEO_of",
    "role": "div",
    "testid": "ontology-showcase-view",
  },
  {
    "name": "EntityOrganizationPersonRelationshipCEO_of",
    "role": "div",
    "testid": "ontology-tree",
  },
]
`;

exports[`SemanticNetworkShowcaseView — W0-03 a11y tree baseline > exposes a stable role/name tree for the readonly semantic-network canvas 1`] = `
[
  {
    "name": "Semantic network showcase",
    "role": "application",
    "testid": "",
  },
  {
    "name": "",
    "role": "div",
    "testid": "semantic-network-showcase-view",
  },
]
`;
